# daz-python-bridge

./: .gitignore  ARCHIVED.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
cmake/: FindQt4.cmake
cmake/qt4_patches/QtCore/: qiterator.h
daemon/: app.py  auth.py  inline_runner.py  inline_runtime.py  paths.py  plugin_registry.py  worker_manager.py  worker_runtime.py
examples/: README.md  call_hello_plugin.dsa
examples/hello_plugin/: main.py  manifest.json
include/: AuthenticationService.h  DaemonHealthMonitor.h  DaemonPaths.h  DaemonProcess.h  DzPythonBridgePane.h  InlineRunner.h  JsonStd.h  PluginDependencyInstaller.h  PluginInstaller.h  PluginStatusManager.h  PortableFs.h  SecureRandom.h  UvBootstrapper.h  ZipInstaller.h  common_version.h  dazpythonbridge.h
src/: AuthenticationService.cpp  CMakeLists.txt  DaemonHealthMonitor.cpp  DaemonPaths.cpp  DaemonProcess.cpp  DzPythonBridgePane.cpp  InlineRunner.cpp  PluginDependencyInstaller.cpp  PluginInstaller.cpp  PluginStatusManager.cpp  SecureRandom.cpp  UvBootstrapper.cpp  ZipInstaller.cpp  pluginmain.cpp
tests/: test_app_plugins_api.py  test_app_run_api.py  test_auth.py  test_inline_runtime.py  test_plugin_registry.py  test_worker_manager.py
tests/cpp/: test_plugin_dependency_installer.cpp  test_plugin_installer.cpp  test_zip_installer.cpp
tests/cpp_fixtures/: generate_fixtures.py
tests/fixtures/: echo_plugin.py  flaky_plugin.py
